fixed main background on mobile

--- a/style.css
+++ b/style.css
@@ -45,13 +45,20 @@ header::before {
 /* I was trying to make background image fixed on main 
 and found background-attachment: fixed on https://www.w3schools.com/cssref/pr_background-attachment.php
 and then I found that I should change background-size to contain to make it work & fit the container without cropping the sides according to https://developer.mozilla.org/en-US/docs/Web/CSS/Guides/Backgrounds_and_borders/Resizing_background_images#:~:text=look%20at%20these.-,contain,to%20see%20this%20in%20action. */
+/* and then I asked on the channel and learned that it’s an iOS Safari bug and Michael suggested putting the background on a ::before pseudo-element that is position: fixed instead, and it worked! */
 main {
     text-align: right;
-    background-image: url("assets/dining-table.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
 
+    &::before {
+        background-image: url('assets/dining-table.png');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        content: '';
+        inset: 0;
+        position: fixed;
+        z-index: -2;
+    }
 }
 
 /* and then I found out that background-attachment: fixed doesn't work on mobile, according to https://stackoverflow.com/questions/26372127/background-fixed-no-repeat-not-working-on-mobile. so I added a media query to make it work on desktop only. */
